# jarvis-2.0-memory-vault

./: .gitignore  .master_system.sh.swp  .pre-commit-config.yaml  README.md  README_RECOVERY.md  auto_jarvis_live.sh  backup.sh  code  holographic_superbash.sh  huggie.md  jarvis_auto_update.sh  jarvis_self_update.sh  lovable-dev  lovable_dev_test.py  master_system.sh  master_workspace_bootstrap.sh  mypy.ini  notes  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  restore.sh  run_jarvis_live.sh  run_node.py  server.js  setup_marketplace.sh  super_copilot_autofix.py  super_jarvis_flask.sh  super_master.sh  superbash.sh  termux_sync_test.txt  ultimate_copilot.py  ultimate_dashboard.sh  ultimate_marketplace.sh  ultimate_marketplace_full_setup.sh  ultimate_quantum_jarvis.sh  ultimate_super_bash.sh  verify_backup.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
Jarvis_os/: config.py  main.py
aam_full_system/: package-lock.json  package.json  server.js
apps/: README.md  index.js
core/: crypto_utils.py
golden_era_marketplace/: dashboard_backend.py  index.html  wsgi.py
project/: index.html
quantum_blockchain/: README_RECOVERY.md  __init__.py  backup.sh  blockchain.py  cli.py  marketplace_export.py  peer_sync.py  recovery.py  requirements.txt  restore.sh  run_node.py  snapshot.py  verify_backup.sh  wallet.py
recovery/: save_wallets.py
scripts/: README.md  seed.js
services/: README.md  index.js
tests/: test_ai_modules.py  test_jarvis_os.py  test_ls_wallets.py  test_quantum_blockchain.py  test_verify_backup.py
(+24 files in other folders)
